# project-soap

./: .gitignore  Cargo.toml  Design Document.md  README.md  SMii7Y - This Deer Game has gone TOO FAR.en.vtt  build.rs  list.txt  usage.md
backends/: vosk-local.md  whisper-x-local.md
installer/Debian/: postinst
installer/Debian/project-soap_0.1.0_amd64/DEBIAN/: control
installer/Debian/project-soap_0.1.0_amd64/DEBIAN/usr/share/doc/project-soap/: copyright
installer/Debian/project-soap_1.0.0_amd64/DEBIAN/: control
installer/WinInstaller/: Folders.wxs  Package.wxs  WinInstaller.sln  WinInstaller.wixproj
src/: cli.rs  main.rs
src/backends/: mod.rs  parakeet_local.rs  vosk_local.rs  whisperx_local.rs
src/backends/parakeet/: .gitignore  Conclusion.m4a  main.py  out.json  pyproject.toml
