[package]
name = "project-soap"
version = "1.0.0"
authors = ["lightningpwr28"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A command line tool to remove expletives from media"
readme = "README.md"
repository = "https://github.com/lightningpwr28/project-soap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vosk = "0.2.0"
serde_json = "1.0.117"
hound = "3.5.1"
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
zip = "2.1.3"
dirs = "5.0.1"
enum_dispatch = "0.3.13"
serde = {version = "1.0.209", features = ["derive"]}
