[project]
name = "parakeet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nemo-toolkit[asr]>=2.6.2",
    "numpy>=2.4.4",
    "torch>=2.9.1",
    "torchaudio>=2.9",
    "nemo_toolkit[asr]>=2.6.2",
    "Mako>=1.3.12",
    "GitPython>=3.1.49",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "aiohttp>=3.14.1"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
